--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-
+The initial index.html page will display the contents of the book "The Vroman Family in America" which is public domain. 
+I am not changing the content of this book, but I am coding links to allow for easier navigation when searching for specific people.
+As a descendent of Hendrick Meese Vrooman, I have reviewed the content of this book many times. Last year, I attempted to create a physical tracker of the family tree, including the newer generations, but was not satisfied with the results. 
+This year, I decided to start with making the content of our family book easier to navigate. This is my main goal for the year. I eventually plan to add more pages to the site, including newer generations, studies of locations, etc.
